<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_action_categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/ic_action_fav"
        android:title="@string/title_fav" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_action_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_action_more"
        android:title="@string/title_more" />

</menu>
